CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

PROJECT(Example_goPMC)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

FIND_PACKAGE(OpenCL REQUIRED)

SET(GOPMC_LIB_DIR "${PROJECT_SOURCE_DIR}/bin")
SET(GOPMC_LIBRARIES
  "${GOPMC_LIB_DIR}/goPMC.lib"
  "${GOPMC_LIB_DIR}/dcmtk.lib"
  "${GOPMC_LIB_DIR}/libDicomRT.lib"
)

ADD_EXECUTABLE(Example_goPMC example.cpp)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
#  ${OPENCL_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(Example_goPMC
  ${GOPMC_LIBRARIES}
  OpenCL::OpenCL
)
