CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

PROJECT(gPMC)

SET(GPMC_VERSION_MAJOR "2")
SET(GPMC_VERSION_MINOR "0")
SET(GPMC_VERSION_PATCH "0")

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})

FIND_PACKAGE(OpenCL REQUIRED)
FIND_PACKAGE(Gengetopt)

SET(GPMC_LIB_DIR "${PROJECT_SOURCE_DIR}/bin")
SET(GPMC_LIBRARIES
  "${GPMC_LIB_DIR}/goPMC.lib"
  "${GPMC_LIB_DIR}/dcmtk.lib"
  "${GPMC_LIB_DIR}/libDicomRT.lib"
)

WRAP_GGO(gPMC_GGO_C gPMC.ggo gPMC3Doutputdose_section.ggo gPMCVersion.ggo.in)

ADD_EXECUTABLE(gPMC gPMC.cpp ${gPMC_GGO_C})

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")

MESSAGE(STATUS "CMake of gPMC was found :: ${PROJECT_SOURCE_DIR}")

TARGET_LINK_LIBRARIES(gPMC
  ${GPMC_LIBRARIES}
  OpenCL::OpenCL
)

INSTALL( TARGETS  gPMC DESTINATION bin )
SET(GPMC_DLLS
  "${GPMC_LIB_DIR}/goPMC.dll"
  "${GPMC_LIB_DIR}/dcmtk.dll"
  "${GPMC_LIB_DIR}/libDicomRT.dll"
)

INSTALL( FILES ${GPMC_DLLS} DESTINATION bin )